[package]
name = "hana-vault-format"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["sha2"] }
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zeroize = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
